Update pages for use with the vite dev server

--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -105,6 +105,6 @@
     </div>
 
     <!-- load demo -->
-    <script src="static/js/demo.js" type="module"></script>
+    <script src="/dev/public/static/js/demo.js" type="module"></script>
 </body>
 </html>
