pages: update script src to use the whole context

--- a/dev/public/overlays.html
+++ b/dev/public/overlays.html
@@ -264,6 +264,6 @@
 </div>
 
 <!-- load app -->
-<script src="static/js/overlays.js" type="module"></script>
+<script src="/dev/public/static/js/overlays.js" type="module"></script>
 </body>
 </html>
